force-app/main/default/objects/Sales_Promotion__c/Sales_Promotion__c.object-meta.xml
<CustomObject>
    <label>Sales Promotion</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Promotion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>