force-app/main/default/objects/Sales_Promotion__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Promotions</relationshipLabel>
    <relationshipName>Sales_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>