force-app/main/default/objects/Sales_Promotion__c/fields/Promotion_Basis__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Basis__c</fullName>
    <label>Promotion Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Amount</fullName>
            </value>
            <value>
                <fullName>% of Deal Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>