force-app/main/default/objects/Sales_Promotion__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>Architect__c</referenceTo>
    <relationshipLabel>Sales Promotions</relationshipLabel>
    <relationshipName>Sales_Promotions</relationshipName>
    <type>Lookup</type>
</CustomField>