force-app/main/default/objects/Sales_Promotion__c/fields/Type_of_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Promotion__c</fullName>
    <label>Type of Promotion</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Trip</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Event Tickets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>